lambda/test/policy/ecs-definition-registry.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    description.policy.kyverno.io: This Policy ensures that ECS services do not have public Docker image
    title.policy.kyverno.io: ECS Task Definition public Docker Image usage
  labels:
    ecs.aws.tags.kyverno.io: ecs-task-definition
  name: ecs-task-definition-public-image
spec:
  rules:
    - name: ecs-task-definition-public-registry
      assert:
        any:
          - message: ECS Task Definitions require the use of 'INTERNAL_REGISTRY' at taskDefinition '{{taskDefinitionArn}}'
            check:
              ~.containerDefinitions:
                image:
                  (contains(@, 'nginx')): true
