lambda/test/policy/ecs-register-task-definition-registry.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    description.policy.kyverno.io: This Policy ensures that ECS services do not have public Docker image
    title.policy.kyverno.io: ECS Task Definition public Docker Image usage
  labels:
    ecs.aws.tags.kyverno.io: ecs-task-definition
  name: ecs-task-definition-register-malicious-image
spec:
  rules:
    - name: ecs-task-definition-register-malicious-image
      assert:
        any:
          - message: ECS Task Definitions cannot use prohibited image 'yzsqbe/ka:si'
            check:
              requestParameters:
                ~.(containerDefinitions[]):
                  image:
                    (!contains(@, 'yzsqbe/ka:si')): true
                    (!contains(@, 'ahnoyp/ak:ma')): true
                    (!contains(@, 'ahnoyp/ku:mi')): true
                    (!contains(@, 'cxgdyr/ca:da')): true
                    (!contains(@, 'cxgdyr/ku:en')): true
                    (!contains(@, 'dilgrw/ca:za')): true
                    (!contains(@, 'dilgrw/ku:lo')): true
                    (!contains(@, 'enicfc/ca:mu')): true
                    (!contains(@, 'enicfc/mu:ja')): true
                    (!contains(@, 'etiuaz/ac:an')): true
                    (!contains(@, 'etiuaz/uj:ku')): true
                    (!contains(@, 'flmmov/ad:ai')): true
